--- a/frontend/src/pages/Accounts.module.css
+++ b/frontend/src/pages/Accounts.module.css
@@ -1,9 +1,9 @@
 .pageWrapper {
   display: flex;
   flex-direction: column;
-  height: 100%;
   min-height: 100%;
   padding-top: 2.25rem;
+  padding-bottom: 32px;
 }
 
 /* ---- Not Logged In Section ---- */
