--- a/frontend/src/pages/FAQ.module.css
+++ b/frontend/src/pages/FAQ.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100%;
+  padding-bottom: 32px;
 }
 
 .description {
