--- a/frontend/src/pages/Manage.module.css
+++ b/frontend/src/pages/Manage.module.css
@@ -1,8 +1,8 @@
 .pageWrapper {
   display: flex;
   flex-direction: column;
-  height: 100%;
   min-height: 100%;
+  padding-bottom: 32px;
 }
 
 .noSessionsMessage {
